--- a/.gitignore
+++ b/.gitignore
@@ -317,3 +317,11 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/django,python,macos,jupyternotebooks,firebase
+
+
+
+
+### additional
+
+#masking for user data
+settings.py 
